2005-11-02  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_unix/support.c (_unix_getpwnam): Fix typo [#1224807].

2005-10-31  Thorsten Kukuk  <kukuk@suse.de>

	* modules/pam_filter/pam_filter.c: Use XCASE only if defined
	[#624214]

2005-10-27  Thorsten Kukuk  <kukuk@suse.de>

	* doc/man/pam.8: Fix wording for authentication chapter [#1197444]

2005-10-26  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_unix/pam_unix_acct.c (_unix_run_verify_binary),
	modules/pam_unix/pam_unix_passwd.c (_unix_run_shadow_binary),
	modules/pam_unix/support.c (_unix_run_shadow_binary_): Set real
	uid to 0 before executing the helper if SELinux is enabled.
	* modules/pam_unix/unix_chkpwd.c (main): Disable user check only
	if real uid is 0 (CVE-2005-2977). Log failed password check attempt.


2005-10-20  Tomas Mraz	<t8m@centrum.cz>

	* configure.in: Added check for xauth binary and --with-xauth option.
	* config.h.in: Added configurable PAM_PATH_XAUTH.
	* modules/pam_xauth/README,
	modules/pam_xauth/pam_xauth.8: Document where xauth is looked for.
	* modules/pam_xauth/pam_xauth.c (pam_sm_open_session): Implement
	searching xauth binary on multiple places.
	(run_coprocess): Don't use execvp as it can be a security risk.

2005-10-04  Steve Langasek  <vorlon@debian.org>

	* libpam/include/security/pam_malloc.h,
	libpam/include/security/pam_modules.h: Declare public header
	files extern "C" so that they are C++-safe.

2005-10-02  Dmitry V. Levin  <ldv@altlinux.org>
	    Steve Langasek  <vorlon@debian.org>

	Cleanup gratuitous use of strdup().
	Fix "missing argument" checks.

	* modules/pam_env/pam_env.c (_pam_parse): Add const qualifier
	to conffile and envfile arguments.  Do not use x_strdup() for
	conffile and envfile initialization.  Fix "missing argument"
	checks.
	(_parse_config_file): Take conffile argument of type "const char *"
	instead of "char **".  Do not free conffile.
	(_parse_env_file): Take env_file argument of type "const char *"
	instead of "char **".  Do not free env_file.